@@ -139,7 +139,7 @@ class STAT_FrontEnd
         StatError_t detachApplication(int *stopList, int stopListSize, bool blocking = true);
         StatError_t terminateApplication(bool blocking = true);
         void printMsg(StatError_t statError, const char *sourceFile, int sourceLine, const char *fmt, ...);
-        StatError_t startLog(unsigned char logType, char *logOutDir);
+        StatError_t startLog(unsigned char logType, char *logOutDir, bool withPid = false);
         StatError_t receiveAck(bool blocking = true);
         StatError_t statBenchCreateStackTraces(unsigned int maxDepth, unsigned int nTasks, unsigned int nTraces, unsigned int functionFanout, int nEqClasses, int iCountRep);
         char *getNodeInEdge(int nodeId);
