@@ -239,7 +239,7 @@ StatError_t parseArgs(StatBenchArgs_t *statBenchArgs, STAT_FrontEnd *statFrontEn
 {
     int i, opt, optionIndex = 0;
     unsigned int logType = 0;
-    char *logOutDir = NULL;
+    char logOutDir[BUFSIZE];
     StatError_t statError;
     struct option longOptions[] =
     {
@@ -269,6 +269,7 @@ StatError_t parseArgs(StatBenchArgs_t *statBenchArgs, STAT_FrontEnd *statFrontEn
         {0,                 0,                  0, 0}
     };
 
+    snprintf(logOutDir, BUFSIZE, "NULL");
     statBenchArgs->topologyType = STAT_TOPOLOGY_DEPTH;
     snprintf(statBenchArgs->topologySpecification, BUFSIZE, "0");
 
@@ -331,8 +332,6 @@ StatError_t parseArgs(StatBenchArgs_t *statBenchArgs, STAT_FrontEnd *statFrontEn
             if (statError != STAT_OK)
             {
                 statFrontEnd->printMsg(statError, __FILE__, __LINE__, "Failed to set tool daemon exe path\n");
-                if (logOutDir != NULL)
-                    free(logOutDir);
                 return statError;
             }
             break;
@@ -341,8 +340,6 @@ StatError_t parseArgs(StatBenchArgs_t *statBenchArgs, STAT_FrontEnd *statFrontEn
             if (statError != STAT_OK)
             {
                 statFrontEnd->printMsg(statError, __FILE__, __LINE__, "Failed to set filter path\n");
-                if (logOutDir != NULL)
-                    free(logOutDir);
                 return statError;
             }
             break;
@@ -353,25 +350,14 @@ StatError_t parseArgs(StatBenchArgs_t *statBenchArgs, STAT_FrontEnd *statFrontEn
                 logType |= STAT_LOG_BE;
             else if (strcmp(optarg, "CP") == 0)
                 logType |= STAT_LOG_CP;
-            else if (strcmp(optarg, "SW") == 0)
-                logType |= STAT_LOG_SW;
-            else if (strcmp(optarg, "SWERR") == 0)
-                logType |= STAT_LOG_SWERR;
             else
             {
-                statFrontEnd->printMsg(STAT_ARG_ERROR, __FILE__, __LINE__, "Log option must equal FE, BE, or ALL, you entered %s\n", optarg);
-                if (logOutDir != NULL)
-                    free(logOutDir);
+                statFrontEnd->printMsg(STAT_ARG_ERROR, __FILE__, __LINE__, "Log option must equal FE, BE, or CP, you entered %s\n", optarg);
                 return STAT_ARG_ERROR;
             }
             break;
         case 'L':
-            logOutDir = strdup(optarg);
-            if (logOutDir == NULL)
-            {
-                statFrontEnd->printMsg(STAT_ALLOCATE_ERROR, __FILE__, __LINE__, "%s Failed to strdup(%s) to logOutDir\n", strerror(errno), optarg);
-                return STAT_ALLOCATE_ERROR;
-            }
+            snprintf(logOutDir, BUFSIZE, "%s", optarg);
             break;
         case 'M':
             logType |= STAT_LOG_MRN;
@@ -396,36 +382,38 @@ StatError_t parseArgs(StatBenchArgs_t *statBenchArgs, STAT_FrontEnd *statFrontEn
         case '?':
             statFrontEnd->printMsg(STAT_ARG_ERROR, __FILE__, __LINE__, "Unknown option %c\n", opt);
             printUsage();
-            if (logOutDir != NULL)
-                free(logOutDir);
             return STAT_ARG_ERROR;
         default:
             statFrontEnd->printMsg(STAT_ARG_ERROR, __FILE__, __LINE__, "Unknown option %c\n", opt);
             printUsage();
-            if (logOutDir != NULL)
-                free(logOutDir);
             return STAT_ARG_ERROR;
         }; /* switch */
     } /* while(1) */
 
-    if (logOutDir != NULL && logType != 0)
+    if (strcmp(logOutDir, "NULL") != 0 && logType != 0)
     {
         statError = statFrontEnd->startLog(logType, logOutDir);
         if (statError != STAT_OK)
         {
             statFrontEnd->printMsg(statError, __FILE__, __LINE__, "Failed start logging\n");
-            free(logOutDir);
             return statError;
         }
     }
-
-    if (logOutDir != NULL)
-        free(logOutDir);
 
     if (statFrontEnd->getLauncherArgc() == 1)
         statFrontEnd->addLauncherArgv("srun");
     statFrontEnd->addLauncherArgv(statFrontEnd->getToolDaemonExe());
     statFrontEnd->addLauncherArgv("--STATBench");
+    if (logType & STAT_LOG_BE)
+    {
+        if (strcmp(logOutDir, "NULL") != 0)
+        {
+            statFrontEnd->addLauncherArgv("-L");
+            statFrontEnd->addLauncherArgv(logOutDir);
+        }
+        statFrontEnd->addLauncherArgv("-l");
+        statFrontEnd->addLauncherArgv("BE");
+    }
 
     return STAT_OK;
 }
